--- a/notes/personal-values.html
+++ b/notes/personal-values.html
@@ -3,13 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Values</title>
+    <title>Why personal values are the most important in our lives</title>
 </head>
 <body>
-    <h1>Why are personal values the most important in our lives?</h1>
+    <h1>Why personal values are the most important in our lives</h1>
     
+    <img src="https://64.media.tumblr.com/7f586c75541d645bd9a07e229c388fe6/tumblr_pw3wr8ilTe1vpievmo4_540.gifv" alt="Frame from 'Whisper of the heart'" width="550">
+
     <p>Lorem ipsum dolor sit <strong>amet consectetur adipisicing elit</strong>. Beatae, sit ducimus dignissimos vero quaerat exercitationem ab facilis, asperiores ad reiciendis magnam necessitatibus, quibusdam laudantium laboriosam. Inventore possimus error commodi eos.</p>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel exercitationem quisquam illo vero beatae voluptatem <em>placeat impedit non inventore officia dicta velit facere nam</em>, mollitia laboriosam deserunt accusantium harum animi.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel exercitationem quisquam illo vero beatae voluptatem <em>placeat impedit non inventore officia dicta velit facere nam</em>, mollitia laboriosam deserunt accusantium harum animi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius a et veritatis. Cum ipsam maiores corporis, fugiat facilis minima sunt sit. Non harum molestiae cupiditate id minus quis doloribus eaque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi repellat, accusamus ratione aperiam recusandae, aliquid mollitia amet dicta nam incidunt reiciendis corporis eos veritatis officiis quis doloribus sed eaque perspiciatis!</p>
+
+    <p>Conditions:</p>
+    <ul>
+        <li>First conditions.</li>
+        <li>Second conditions.</li>
+        <li>Third conditions.</li>
+    </ul>
+
+    <p>Steps:</p>
+    <ol>
+        <li>First step.</li>
+        <li>Second step.</li>
+        <li>Third step.</li>
+    </ol>
 </body>
 </html>
