--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nikita Zhytnyk</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>Nikita Zhytnyk</h1>
-    <img src="https://64.media.tumblr.com/e92a9472c0062f530e139d1d86abc620/tumblr_ou6ys7IwmU1w86w6ho1_1280.gifv" alt="Frame for anime 'The Wind Rises'" width="550">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ullam sint illo laboriosam iste voluptatem.</p>
-    <h2>Notes</h2>
-    <p>Last notes:</p>
-    <ul>
-        <li><a href="./notes/personal-values.html">Why personal values are the most important in our lives</a></li>
-        <li><a href="./notes/find-your-game.html">How to find your job/game</a></li>
-        <li><a href="./notes/aspects-of-life.html">Crucial aspects of life which require constant support</a></li>
-    </ul>
+    <h1 class="align-center-text">NIKITA ZHYTNYK</h1>
+    <img src="https://64.media.tumblr.com/e92a9472c0062f530e139d1d86abc620/tumblr_ou6ys7IwmU1w86w6ho1_1280.gifv" alt="Frame for anime 'The Wind Rises'">
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ullam sint illo laboriosam iste voluptatem.</p>
+        <h2>Notes</h2>
+        <p>Last notes:</p>
+        <ul>
+            <li><a href="./notes/personal-values.html">Why personal values are the most important in our lives</a></li>
+            <li><a href="./notes/find-your-game.html">How to find your job/game</a></li>
+            <li><a href="./notes/aspects-of-life.html">Crucial aspects of life which require constant support</a></li>
+        </ul>
 
-    <h2>Quotes</h2>
-    <p>We'll be soon.</p>
+        <h2>Quotes</h2>
+        <p>We'll be soon.</p>
+    </div>
 </body>
 </html>
