Edit index.html and style.css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nikita Zhytnyk</title>
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -20,7 +19,16 @@
         </ul>
 
         <h2>Quotes</h2>
-        <p>We'll be soon.</p>
+        <p>. . .</p>
+
+        <h2>Favorite movies</h2>
+        <p>. . .</p>
+
+        <h2>Portfolio</h2>
+        <p>. . .</p>
+
+        <h2>CV</h2>
+        <p>. . .</p>
     </div>
 </body>
 </html>
