Update index.html and style.css
I changed the structure of style.css. Created a few classes and added padding, margin, and border.

--- a/index.html
+++ b/index.html
@@ -6,29 +6,33 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1 class="align-center-text">NIKITA ZHYTNYK</h1>
-    <img src="https://64.media.tumblr.com/e92a9472c0062f530e139d1d86abc620/tumblr_ou6ys7IwmU1w86w6ho1_1280.gifv" alt="Frame for anime 'The Wind Rises'">
-    <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ullam sint illo laboriosam iste voluptatem.</p>
-        <h2>Notes</h2>
-        <p>Last notes:</p>
-        <ul>
-            <li><a href="./notes/personal-values.html">Why personal values are the most important in our lives</a></li>
-            <li><a href="./notes/find-your-game.html">How to find your job/game</a></li>
-            <li><a href="./notes/aspects-of-life.html">Crucial aspects of life which require constant support</a></li>
-        </ul>
+    <div class="home-page-card">
+        <h1 class="align-center-text">NIKITA ZHYTNYK</h1>
+        <img src="https://64.media.tumblr.com/e92a9472c0062f530e139d1d86abc620/tumblr_ou6ys7IwmU1w86w6ho1_1280.gifv" alt="Frame for anime 'The Wind Rises'">
+        
+        <div class="home-page-content">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ullam sint illo laboriosam iste voluptatem.</p>
+            
+            <h2>Notes</h2>
+            <p>Last notes:</p>
+            <ul>
+                <li><a href="./notes/personal-values.html">Why personal values are the most important in our lives</a></li>
+                <li><a href="./notes/find-your-game.html">How to find your job/game</a></li>
+                <li><a href="./notes/aspects-of-life.html">Crucial aspects of life which require constant support</a></li>
+            </ul>
 
-        <h2>Quotes</h2>
-        <p>. . .</p>
+            <h2>Quotes</h2>
+            <p>. . .</p>
 
-        <h2>Favorite movies</h2>
-        <p>. . .</p>
+            <h2>Favorite movies</h2>
+            <p>. . .</p>
 
-        <h2>Portfolio</h2>
-        <p>. . .</p>
+            <h2>Portfolio</h2>
+            <p>. . .</p>
 
-        <h2>CV</h2>
-        <p>. . .</p>
+            <h2>CV</h2>
+            <p>. . .</p>
+        </div>
     </div>
 </body>
 </html>
