Restructure index.html and experiment to create draft header
I thought it would be better to make the home page like a CV and a showcase

--- a/index.html
+++ b/index.html
@@ -7,31 +7,29 @@
 </head>
 <body>
     <div class="home-page-card">
-        <h1 class="align-center-text">NIKITA ZHYTNYK</h1>
+        <div>
+            <!-- Draft header for practice the box model concept -->
+            <ul class="header-test">
+                <li><a href="#">NIKITA ZHYTNYK</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Quotes</a></li>
+                <li><a href="#">Favorite movies</a></li>
+                <li><a href="#">Portfolio & CV</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
         <img src="https://64.media.tumblr.com/e92a9472c0062f530e139d1d86abc620/tumblr_ou6ys7IwmU1w86w6ho1_1280.gifv" alt="Frame for anime 'The Wind Rises'">
         
         <div class="home-page-content">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ullam sint illo laboriosam iste voluptatem.</p>
+            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ullam sint illo laboriosam iste voluptatem.</p>
             
-            <h2>Notes</h2>
-            <p>Last notes:</p>
-            <ul>
+            <!--<ul>
                 <li><a href="./notes/personal-values.html">Why personal values are the most important in our lives</a></li>
                 <li><a href="./notes/find-your-game.html">How to find your job/game</a></li>
                 <li><a href="./notes/aspects-of-life.html">Crucial aspects of life which require constant support</a></li>
-            </ul>
+            </ul>-->
 
-            <h2>Quotes</h2>
-            <p>. . .</p>
-
-            <h2>Favorite movies</h2>
-            <p>. . .</p>
-
-            <h2>Portfolio</h2>
-            <p>. . .</p>
-
-            <h2>CV</h2>
-            <p>. . .</p>
         </div>
     </div>
 </body>
