--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="home-page-card">
         <div>
             <!-- Draft header for practice the box model concept -->
-            <ul class="header-test">
+            <ul class="header-links">
                 <li><a href="#">NIKITA ZHYTNYK</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Quotes</a></li>
@@ -19,7 +19,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
-        
+
         <img src="https://64.media.tumblr.com/e92a9472c0062f530e139d1d86abc620/tumblr_ou6ys7IwmU1w86w6ho1_1280.gifv" alt="Frame for anime 'The Wind Rises'">
         
         <div class="home-page-content">
