Clean up index.html and style.css

--- a/index.html
+++ b/index.html
@@ -11,20 +11,11 @@
             <h1>Hi, my name is</h1>
             <h2>Nikita Zhytnyk.</h2>
             <h3>I love build useful and elegant things.</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, praesentium maiores fugit repellat cumque nostrum illum sint nam ullam animi, aspernatur sequi architecto, repellendus ex delectus omnis numquam. Asperiores, officia quia rem quas magnam nihil exercitationem tenetur deleniti praesentium cum ratione consequatur obcaecati blanditiis numquam, ad minima placeat? Tempore, doloribus omnis eligendi minima repellat harum quia voluptatem accusamus labore corrupti sunt possimus ipsa dolore earum magni voluptatum non natus? Deleniti possimus quos eligendi. Quisquam, temporibus aspernatur? Facilis nemo illum doloribus, commodi modi quo iste similique tempora natus reprehenderit a incidunt animi veniam quod, enim consectetur dolorem at autem possimus ad excepturi minima? Possimus quas quis soluta minus? Asperiores similique libero eius consectetur tenetur totam ad magnam itaque recusandae, et deleniti atque sapiente commodi rerum eveniet aperiam in eum facilis repellat dolores blanditiis quis repudiandae? Culpa dolorem est eaque magni, minus officiis cumque dolore reiciendis aperiam a sint quod obcaecati facilis, exercitationem repellat autem quidem nobis officia earum dolor architecto. Dolore corporis deserunt quasi earum ad. Doloremque in ex quod, quam corporis, perferendis porro inventore, eius consectetur minus quia alias similique veniam maiores provident ipsa voluptas? Excepturi alias repudiandae enim deserunt ipsum ipsa ad dolorum, possimus error fugit eveniet et iusto!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, praesentium maiores fugit repellat cumque nostrum illum sint nam ullam animi, aspernatur sequi architecto, repellendus ex delectus omnis numquam. Asperiores, officia quia rem quas magnam nihil exercitationem tenetur deleniti praesentium cum ratione consequatur obcaecati blanditiis numquam, ad minima placeat? Tempore, doloribus omnis eligendi minima repellat harum quia voluptatem accusamus labore corrupti sunt possimus ipsa dolore earum magni voluptatum non natus? Deleniti possimus quos eligendi. Quisquam, temporibus aspernatur?</p>
         </div>
 
-        <img src="https://64.media.tumblr.com/e92a9472c0062f530e139d1d86abc620/tumblr_ou6ys7IwmU1w86w6ho1_1280.gifv" alt="Frame for anime 'The Wind Rises'">
+        <img class="gif-anime" src="https://64.media.tumblr.com/e92a9472c0062f530e139d1d86abc620/tumblr_ou6ys7IwmU1w86w6ho1_1280.gifv" alt="Frame for anime 'The Wind Rises'">
         
-        <div class="home-page-content">
-            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ullam sint illo laboriosam iste voluptatem.</p>
-            <!--<ul>
-                <li><a href="./notes/personal-values.html">Why personal values are the most important in our lives</a></li>
-                <li><a href="./notes/find-your-game.html">How to find your job/game</a></li>
-                <li><a href="./notes/aspects-of-life.html">Crucial aspects of life which require constant support</a></li>
-            </ul>-->
-
-        </div>
     </div>
 </body>
 </html>
