--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
 </head>
 <body>
     <div class="hero">
-        <div>
             <h1 class="big-heading">Hi, my name is</h1>
             <h2 class="big-heading">Nikita Zhytnyk.</h2>
             <h3 class="big-heading">I love build useful and elegant things.</h3>
             <p class="big-heading">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, praesentium maiores fugit repellat cumque nostrum illum sint nam ullam animi, aspernatur sequi architecto, repellendus ex delectus omnis numquam. Asperiores, officia quia rem quas magnam nihil exercitationem tenetur deleniti praesentium?</p>
-        </div>
     </div>
 
     <div class="gif-anime">
-        <img class="gif-anime" src="https://64.media.tumblr.com/e92a9472c0062f530e139d1d86abc620/tumblr_ou6ys7IwmU1w86w6ho1_1280.gifv" alt="Frame for anime 'The Wind Rises'">
+        <img src="https://64.media.tumblr.com/e92a9472c0062f530e139d1d86abc620/tumblr_ou6ys7IwmU1w86w6ho1_1280.gifv" alt="Frame for anime 'The Wind Rises'">
     </div> 
 </body>
 </html>
