--- a/index.html
+++ b/index.html
@@ -6,15 +6,30 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="hero">
-            <h1 class="big-heading">Hi, my name is</h1>
-            <h2 class="big-heading">Nikita Zhytnyk.</h2>
-            <h3 class="big-heading">I love build useful and elegant things.</h3>
-            <p class="big-heading">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, praesentium maiores fugit repellat cumque nostrum illum sint nam ullam animi, aspernatur sequi architecto, repellendus ex delectus omnis numquam. Asperiores, officia quia rem quas magnam nihil exercitationem tenetur deleniti praesentium?</p>
-    </div>
+    <div class="main">
+        <div class="big-heading">
+                <h1 class="big-heading">Hi, my name is</h1>
+                <h2 class="big-heading">Nikita Zhytnyk.</h2>
+                <h3 class="big-heading">I love build useful things.</h3>
+                <p class="big-heading">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, praesentium maiores fugit repellat cumque nostrum illum sint nam ullam animi, aspernatur sequi architecto, repellendus ex delectus omnis numquam.</p>
+        </div>
 
-    <div class="gif-anime">
-        <img src="https://64.media.tumblr.com/e92a9472c0062f530e139d1d86abc620/tumblr_ou6ys7IwmU1w86w6ho1_1280.gifv" alt="Frame for anime 'The Wind Rises'">
-    </div> 
+        <div class="gif-anime">
+            <img src="https://64.media.tumblr.com/e92a9472c0062f530e139d1d86abc620/tumblr_ou6ys7IwmU1w86w6ho1_1280.gifv" alt="Frame for anime 'The Wind Rises'">
+        </div> 
+        
+        <div class="social">
+            <ul class="social">
+                <li class="social">
+                    <a href="#" target="_blank" rel="noopener noreferrer">
+                        <img src="https://skillicons.dev/icons?i=github" alt="Github Icon"></a>
+                </li>
+                <li class="social">
+                    <a href="#" target="_blank" rel="noopener noreferrer">
+                        <img src="https://skillicons.dev/icons?i=linkedin" alt="LinkedIn Icon"></a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
