--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <div class="social">
             <ul class="social">
                 <li class="social">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                        <img src="https://skillicons.dev/icons?i=github" alt="Github Icon"></a>
+                    <a href="#" rel="noopener noreferrer">
+                        <img height="40" width="40" src="https://cdn.simpleicons.org/github/white" alt="Github Icon"></a>
                 </li>
                 <li class="social">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                        <img src="https://skillicons.dev/icons?i=linkedin" alt="LinkedIn Icon"></a>
+                    <a href="#" rel="noopener noreferrer">
+                        <img height="40" width="40" src="https://cdn.simpleicons.org/linkedin/white" alt="LinkedIn Icon"></a>
                 </li>
             </ul>
         </div>
