--- a/index.html
+++ b/index.html
@@ -14,10 +14,25 @@
                 <p class="big-heading">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, praesentium maiores fugit repellat cumque nostrum illum sint nam ullam animi, aspernatur sequi architecto, repellendus ex delectus omnis numquam.</p>
         </div>
 
+        <div class="about-me">
+            <h2 class="about-me">About me</h2>
+            <p class="about-me">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, qui modi! Magnam ducimus deserunt culpa. Ducimus, cumque sunt? Sed velit consequuntur reiciendis iusto minus voluptate tempore illum perferendis distinctio pariatur. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore qui laboriosam sequi nesciunt, molestiae asperiores illum doloribus eaque aperiam consectetur minima est maiores maxime, dolor at consequatur facilis vitae atque?</p>
+            <p class="about-me">Similique in quisquam ex, officiis commodi non tenetur iure voluptatem, ducimus eligendi repudiandae magnam? Reiciendis dicta voluptatem quidem qui quis aspernatur odio cumque quibusdam. Facilis, ut? Rerum molestias animi error incidunt laborum, quae quo sint dolor, quaerat nemo cumque quia eaque veritatis nulla consequuntur nobis cum. Atque nesciunt quisquam veritatis sit minima praesentium consequuntur, ducimus recusandae commodi. Aliquid iure, reiciendis magnam recusandae in dicta quae veritatis rem! Illo et perspiciatis debitis dolore suscipit culpa iusto nisi laborum, maiores, placeat dolorem tempora ad dignissimos obcaecati.</p>
+            <p class="about-me">Skills:</p>
+            <ul class="about-me">
+                <li class="about-me">HTML & CSS</li>
+                <li class="about-me">JavaScript</li>
+                <li class="about-me">React</li>
+                <li class="about-me">WordPress</li>
+                <li class="about-me">Photoshop</li>
+                <li class="about-me">After Effects</li>
+            </ul>
+        </div>
+
         <div class="gif-anime">
             <img src="https://64.media.tumblr.com/e92a9472c0062f530e139d1d86abc620/tumblr_ou6ys7IwmU1w86w6ho1_1280.gifv" alt="Frame for anime 'The Wind Rises'">
         </div> 
-        
+
         <div class="social">
             <ul class="social">
                 <li class="social">
