Add raw structure of header and 'About' section in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,31 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    
+    <div class="header">
+        <div>
+            <a href="#">Nikita Zhytnyk</a>
+            <h2>Front-End Developer</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat porro, earum.</p>
+        </div>
+
+        <div>
+            <a href="#">ABOUT</a>
+            <a href="#">SKILLS</a>
+            <a href="#">PROJECTS</a>
+            <a href="#">EDUCATION</a>
+        </div>
+    </div>
+
+    <div class="main">
+        <div class="about">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, doloremque voluptatum? Hic officia corrupti assumenda nulla temporibus sapiente, commodi cum accusamus est dignissimos ab placeat laboriosam iste itaque suscipit ipsa?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque cupiditate facilis quia, perspiciatis atque aut saepe veniam? Eum corporis repellat illum voluptates suscipit ab aspernatur harum sequi, ducimus iusto aperiam.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident inventore velit maiores consequuntur, debitis, neque, unde impedit laudantium itaque expedita libero commodi ea. Tenetur commodi delectus saepe eius esse minima.</p>
+        </div>
+
+        <div class="skills">
+            
+        </div>
+    </div>
 </body>
 </html>
