Add classes to the header in index.html

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <div class="header">
-        <div>
+        <div class="big-heading">
             <a href="#">Nikita Zhytnyk</a>
             <h2>Front-End Developer</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat porro, earum.</p>
         </div>
 
-        <div>
+        <div class="header-links">
             <a href="#">ABOUT</a>
             <a href="#">SKILLS</a>
             <a href="#">PROJECTS</a>
