Update index.html, add social media to the header

--- a/index.html
+++ b/index.html
@@ -7,17 +7,24 @@
 </head>
 <body>
     <div class="header">
-        <div class="big-heading">
-            <a href="#">Nikita Zhytnyk</a>
-            <h2>Front-End Developer</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat porro, earum.</p>
+        <div class="header-container">
+            <div class="big-heading">
+                <a href="#">Nikita Zhytnyk</a>
+                <h2>Front-End Developer</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat porro, earum.</p>
+            </div>
+
+            <div class="header-links">
+                <a href="#">ABOUT</a>
+                <a href="#">SKILLS</a>
+                <a href="#">PROJECTS</a>
+                <a href="#">EDUCATION</a>
+            </div>
         </div>
 
-        <div class="header-links">
-            <a href="#">ABOUT</a>
-            <a href="#">SKILLS</a>
-            <a href="#">PROJECTS</a>
-            <a href="#">EDUCATION</a>
+        <div class="social">
+            <a href="#"><img height="25" width="25" src="https://cdn.simpleicons.org/github/white" alt="Github Icon"></a>
+            <a href="#"><img height="25" width="25" src="https://cdn.simpleicons.org/linkedin/white" alt="LinkedIn Icon"></a>
         </div>
     </div>
 
