Add style to the big heading

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
             <header>
                 <div class="header-container">
                     <div class="big-heading">
-                        <a href="#">Nikita Zhytnyk</a>
-                        <h2>Front-End Developer</h2>
+                        <a class="my-name" href="#">Nikita Zhytnyk</a>
+                        <h2 class="job-title">Front-End Developer</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat porro, earum.</p>
-                    </div>
+                    </div>  
 
                     <div class="header-links">
                         <a href="#">ABOUT</a>
