--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
+
+        <video autoplay loop muted>
+            <source src="videoplayback.mp4" type="video/mp4" />
+            <source src="videoplayback.webm" type="video/webm" />
+        </video>
+
         <div class="wrapper">
             <header>
                 <div class="header-container">
