--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
     <!DOCTYPE html>
     <html lang="en">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Nikita Zhytnyk</title>
         <link rel="stylesheet" href="style.css" />
     </head>
@@ -59,6 +59,13 @@
                     </div>
                 </div>
 
+                <div class="projects">
+                    <div>
+                        <img src="">
+                        <a href=""></a>
+                        <p></p>
+                    </div>
+                </div>
 
             </main>
         </div>
