Update the HTML structure of 'Skills' section

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     </head>
     <body>
 
-        <video autoplay loop muted>
+        <!-- <video autoplay loop muted>
             <source src="videoplayback.mp4" type="video/mp4" />
             <source src="videoplayback.webm" type="video/webm" />
-        </video>
+        </video> -->
 
         <div class="wrapper">
             <header>
@@ -44,18 +44,28 @@
 
                 <div class="skills">
                     <div class="skill">
-                        Front-end languages:
-                        <p>HTML, SCSS, JS</p>
+                        <p>Languages:</p>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JS</li>
+                        </ul>
                     </div>
 
                     <div class="skill">
-                        CMS:
-                        <p>WordPress</p>
+                        <p>CMS:</p>
+                        <ul>
+                            <li>WordPress</li>
+                        </ul>
                     </div>
 
                     <div class="skill">
-                        Design:
-                        <p>Photoshop, After Effects, Figma</p>
+                        <p>Design:</p>
+                        <ul>
+                            <li>Photoshop</li>
+                            <li>After Effects</li>
+                            <li>Figma</li>
+                        </ul>
                     </div>
                 </div>
 
