Add structure and style to the 'Projects' section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident inventore velit maiores consequuntur, debitis, <a href="#">neque, unde impedit</a> laudantium itaque expedita libero commodi ea. Tenetur commodi delectus saepe eius esse minima.</p>
                 </div>
 
-                <div class="skills">
+                <div class="skills mb-96px">
                     <div class="skill">
                         <p>Languages:</p>
                         <ul>
@@ -70,10 +70,13 @@
                 </div>
 
                 <div class="projects">
-                    <div>
-                        <img src="">
-                        <a href=""></a>
-                        <p></p>
+                    <div class="project">
+                        <img src="https://lh3.googleusercontent.com/7PoLcOh1bDmrlxz4ZrJK_VnlcUv7ATdaNLm3eOUOIjAGctQhqcAM73-T1uznL2Celw53XdM9GrzKz76MRjdhuT0-=w640-h400-e365-rj-sc0x00ffffff">
+                        
+                        <div>
+                            <h3 class="mb-16px">RPA consulting</h3>
+                            <p>Was done with WordPress and Elementor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam sunt commodi delectus facilis eaque, architecto quam quasi, nobis consectetur ut sit eos nemo fugiat saepe, nihil quaerat. Culpa, illum tenetur.</p>
+                        </div>
                     </div>
                 </div>
 
