Update the 'Skills' section

--- a/index.html
+++ b/index.html
@@ -44,24 +44,20 @@
 
                 <div class="skills mb-96px">
                     <div class="skill">
-                        <p>Languages:</p>
+                        <p>Front-End Languages:</p>
                         <ul>
                             <li>HTML</li>
                             <li>CSS</li>
-                            <li>JS</li>
+                            <li>JavaScript</li>
                         </ul>
                     </div>
 
                     <div class="skill">
-                        <p>CMS:</p>
+                        <p>Tools & Platforms:</p>
                         <ul>
+                            <li>Git</li>
+                            <li>GitHub</li>
                             <li>WordPress</li>
-                        </ul>
-                    </div>
-
-                    <div class="skill">
-                        <p>Design:</p>
-                        <ul>
                             <li>Photoshop</li>
                             <li>After Effects</li>
                             <li>Figma</li>
@@ -74,7 +70,7 @@
                         <img src="https://lh3.googleusercontent.com/7PoLcOh1bDmrlxz4ZrJK_VnlcUv7ATdaNLm3eOUOIjAGctQhqcAM73-T1uznL2Celw53XdM9GrzKz76MRjdhuT0-=w640-h400-e365-rj-sc0x00ffffff">
                         
                         <div>
-                            <h3 class="mb-16px">RPA consulting</h3>
+                            <h3>RPA consulting</h3>
                             <p>Was done with WordPress and Elementor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam sunt commodi delectus facilis eaque, architecto quam quasi, nobis consectetur ut sit eos nemo fugiat saepe, nihil quaerat. Culpa, illum tenetur.</p>
                         </div>
                     </div>
