Add a photo to big heading

--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@
         <div class="wrapper">
             <header>
                 <div class="header-container">
+                    <div class="photo-name">
+                        <img class="headshot" src="./images/headshot.png">
+
+                        <div class="my-name">
+                            <a href="#">Nikita</a>
+                            <a href="#">Zhytnyk</a>
+                        </div>
+                    </div>
+
                     <div class="big-heading">
-                        <a class="my-name" href="#">Nikita Zhytnyk</a>
                         <h2 class="job-title">Front-End Developer</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat porro, earum.</p>
                     </div>  
