Replace div class='navigation' with just nav

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat porro, earum.</p>
                     </div>  
 
-                    <div class="navigation">
+                    <nav>
                         <a href="#about">ABOUT</a>
                         <a href="#skills">SKILLS</a>
                         <a href="#projects">PROJECTS</a>
                         <a href="#education">EDUCATION</a>
                         <a href="#hobbies">HOBBIES</a>
-                    </div>
+                    </nav>
                 </div>
 
                 <div class="social">
