Add the class 'active'

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </div>  
 
                     <nav>
-                        <a href="#about">ABOUT</a>
+                        <a href="#about" class="active">ABOUT</a>
                         <a href="#skills">SKILLS</a>
                         <a href="#projects">PROJECTS</a>
                         <a href="#education">EDUCATION</a>
