--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
                         
                     </div>
                 </section>
+
+                <script src="script.js"></script>
             </main>
         </div>
     </body>
