Add margin-bottom to 'Hobbies'

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </div>
                 </section>
 
-                <section id="hobbies" class="hobbies">
+                <section id="hobbies" class="hobbies mb-96px">
                     <p class="mb-16px">I love technology, anime, discussing sense of the thing, eating in cafes, and especially improving in something where I want to become a master.</p>
 
                     <p class="mb-16px">A few years ago site where was my list of favorite anime died, and list with 100+ anime gone.</p>
