Disable photo and change font-weight of big heading

--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
             <header>
                 <div class="header-container">
                     <div class="photo-name">
-                        <img class="headshot" src="./images/headshot.png">
+                        <!-- <img class="headshot" src="./images/headshot.png"> -->
 
                         <div class="my-name">
-                            <a href="#">Nikita</a>
-                            <a href="#">Zhytnyk</a>
+                            <a class="my-name" href="#">Nikita Zhytnyk</a>
                         </div>
                     </div>
 
