Add flex placeholders to increase responsive of layout

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             <source src="videoplayback.webm" type="video/webm" />
         </video> -->
 
+        <div class="flex-placeholder-left"></div>
+
         <div class="wrapper">
             <header>
                 <div class="header-container">
@@ -129,5 +131,8 @@
                 <script src="script.js"></script>
             </main>
         </div>
+
+        <div class="flex-placeholder-right"></div>
+
     </body>
     </html>
