--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
                 </section>
 
                 <script src="script.js"></script>
+
+                <footer>
+                    <p>Built with vanilla HTML, CSS, and JS, deployed with Vercel.</p>
+                </footer>
             </main>
         </div>
 
