Enabled background video and add a semi-transparent background color

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     </head>
     <body>
 
-        <!-- <video autoplay loop muted>
+        <video autoplay loop muted>
             <source src="videoplayback.mp4" type="video/mp4" />
             <source src="videoplayback.webm" type="video/webm" />
-        </video> -->
+        </video>
 
         <div class="flex-placeholder-left"></div>
 
