--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                         <a href="#about" class="active">ABOUT</a>
                         <a href="#skills">SKILLS</a>
                         <a href="#projects">PROJECTS</a>
-                        <a href="#education">EDUCATION</a>
                         <a href="#hobbies">HOBBIES</a>
                     </nav>
                 </div>
@@ -47,7 +46,7 @@
 
             <main>
                 <section id="about" class="about mb-96px">
-                    <p class="mb-16px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, doloremque voluptatum? Hic officia corrupti assumenda <a href="#">nulla temporibus sapiente</a> , commodi cum accusamus est dignissimos ab placeat laboriosam iste itaque suscipit ipsa?</p>
+                    <p class="mb-16px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, doloremque voluptatum? Hic officia corrupti assumenda <a href="#">nulls sapiente</a>, commodi cum accusamus est dignissimos ab placeat laboriosam iste itaque suscipit ipsa?</p>
                     <p class="mb-16px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque cupiditate facilis quia, perspiciatis atque aut saepe veniam? Eum corporis repellat <a href="#">illum voluptates</a> suscipit ab aspernatur harum sequi, ducimus iusto aperiam.</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident inventore velit maiores consequuntur, debitis, <a href="#">neque, unde impedit</a> laudantium itaque expedita libero commodi ea. Tenetur commodi delectus saepe eius esse minima.</p>
                 </section>
