Add the 'Experience' section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
                     <nav>
                         <a href="#about" class="active">ABOUT</a>
+                        <a href="#experience">EXPERIENCE</a>
                         <a href="#skills">SKILLS</a>
                         <a href="#projects">PROJECTS</a>
                         <a href="#hobbies">HOBBIES</a>
@@ -39,8 +40,8 @@
                 </div>
 
                 <div class="social">
-                    <a href="#"><img height="25" width="25" src="https://cdn.simpleicons.org/github/white" alt="Github Icon"></a>
-                    <a href="#"><img height="25" width="25" src="https://cdn.simpleicons.org/linkedin/white" alt="LinkedIn Icon"></a>
+                    <a href="#"><img height="25" width="25" src="https://cdn.simpleicons.org/github/gainsboro" alt="Github Icon"></a>
+                    <a href="#"><img height="25" width="25" src="https://cdn.simpleicons.org/linkedin/gainsboro" alt="LinkedIn Icon"></a>
                 </div>
             </header>
 
@@ -49,6 +50,37 @@
                     <p class="mb-16px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, doloremque voluptatum? Hic officia corrupti assumenda <a href="#">nulls sapiente</a>, commodi cum accusamus est dignissimos ab placeat laboriosam iste itaque suscipit ipsa?</p>
                     <p class="mb-16px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque cupiditate facilis quia, perspiciatis atque aut saepe veniam? Eum corporis repellat <a href="#">illum voluptates</a> suscipit ab aspernatur harum sequi, ducimus iusto aperiam.</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident inventore velit maiores consequuntur, debitis, <a href="#">neque, unde impedit</a> laudantium itaque expedita libero commodi ea. Tenetur commodi delectus saepe eius esse minima.</p>
+                </section>
+
+
+                <section id="experience" class="experience mb-96px container">
+                    <a href="robomate.tech" target="_blank" rel="noopener noreferrer">
+                        <div class="job-period">
+                            <p>NOV 2022 — PRESENT</p>
+                            <!-- <p>REMOTE</p> -->
+                        </div>
+
+                        <div class="experience-info">
+                            <p class="experience-job-title mb-16px">
+                                SMM manager | robomate
+                            </p>
+
+                            <p class="experience-description mb-16px">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor dolorum perspiciatis velit necessitatibus voluptatum sint, perferendis doloremque harum provident deserunt.
+                            </p>
+
+                            <div class="experience-skills">
+                                <ul>
+                                    <li>WordPress</li>
+                                    <li>Elementor</li>
+                                    <li>Photoshop</li>
+                                    <li>After Effects</li>
+                                    <li>Figma</li>
+                                    <li>Teamwork</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
                 </section>
 
 
