Disable 'Hobbies' in navbar

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a href="#experience">EXPERIENCE</a>
                         <a href="#skills">SKILLS</a>
                         <a href="#projects">PROJECTS</a>
-                        <a href="#hobbies">HOBBIES</a>
+                        <!-- <a href="#hobbies">HOBBIES</a> -->
                     </nav>
                 </div>
 
