Add h3 with names to each section

--- a/index.html
+++ b/index.html
@@ -46,38 +46,44 @@
             </header>
 
             <main>
+
                 <section id="about" class="about mb-96px">
+                    <h3>ABOUT</h3>
                     <p class="mb-16px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, doloremque voluptatum? Hic officia corrupti assumenda <a href="#">nulls sapiente</a>, commodi cum accusamus est dignissimos ab placeat laboriosam iste itaque suscipit ipsa?</p>
                     <p class="mb-16px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque cupiditate facilis quia, perspiciatis atque aut saepe veniam? Eum corporis repellat <a href="#">illum voluptates</a> suscipit ab aspernatur harum sequi, ducimus iusto aperiam.</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident inventore velit maiores consequuntur, debitis, <a href="#">neque, unde impedit</a> laudantium itaque expedita libero commodi ea. Tenetur commodi delectus saepe eius esse minima.</p>
                 </section>
 
 
-                <section id="experience" class="experience mb-96px container">
+                <section id="experience" class="experience mb-96px">
+                    <h3>EXPERIENCE</h3>
+
                     <a href="robomate.tech" target="_blank" rel="noopener noreferrer">
-                        <div class="job-period">
-                            <p>NOV 2022 — PRESENT</p>
-                            <!-- <p>REMOTE</p> -->
-                        </div>
+                        <div class="container">
+                            <div class="job-period">
+                                <p>NOV 2022 — PRESENT</p>
+                                <!-- <p>REMOTE</p> -->
+                            </div>
 
-                        <div class="experience-info">
-                            <p class="experience-job-title mb-16px">
-                                SMM manager | robomate
-                            </p>
+                            <div class="experience-info">
+                                <p class="experience-job-title mb-16px">
+                                    SMM manager | robomate
+                                </p>
 
-                            <p class="experience-description mb-16px">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor dolorum perspiciatis velit necessitatibus voluptatum sint, perferendis doloremque harum provident deserunt.
-                            </p>
+                                <p class="experience-description mb-16px">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor dolorum perspiciatis velit necessitatibus voluptatum sint, perferendis doloremque harum provident deserunt.
+                                </p>
 
-                            <div class="experience-skills">
-                                <ul>
-                                    <li>WordPress</li>
-                                    <li>Elementor</li>
-                                    <li>Photoshop</li>
-                                    <li>After Effects</li>
-                                    <li>Figma</li>
-                                    <li>Teamwork</li>
-                                </ul>
+                                <div class="experience-skills">
+                                    <ul>
+                                        <li>WordPress</li>
+                                        <li>Elementor</li>
+                                        <li>Photoshop</li>
+                                        <li>After Effects</li>
+                                        <li>Figma</li>
+                                        <li>Teamwork</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </a>
@@ -85,6 +91,8 @@
 
 
                 <section id="skills" class="skills mb-96px">
+                    <h3>SKILLS</h3>
+
                     <div class="skill">
                         <p>Front-End Languages:</p>
                         <ul>
@@ -109,6 +117,7 @@
 
 
                 <section id="projects" class="projects mb-96px">
+                    <h3>PROJECTS</h3>
 
                     <a href="#">
                         <div class="project mb-48px container">
@@ -135,6 +144,8 @@
 
                 
                 <section id="hobbies" class="hobbies mb-96px">
+                    <h3>HOBBIES</h3>
+
                     <p class="mb-16px">I love technology, anime, discussing sense of the thing, eating in cafes, and especially improving in something where I want to become a master.</p>
 
                     <p class="mb-16px">A few years ago site where was my list of favorite anime died, and list with 100+ anime gone.</p>
