--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <main>
 
                 <section id="about" class="about mb-96px">
-                    <h3>ABOUT</h3>
+                    <h3 class="mb-16px">ABOUT</h3>
                     <p class="mb-16px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, doloremque voluptatum? Hic officia corrupti assumenda <a href="#">nulls sapiente</a>, commodi cum accusamus est dignissimos ab placeat laboriosam iste itaque suscipit ipsa?</p>
                     <p class="mb-16px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque cupiditate facilis quia, perspiciatis atque aut saepe veniam? Eum corporis repellat <a href="#">illum voluptates</a> suscipit ab aspernatur harum sequi, ducimus iusto aperiam.</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident inventore velit maiores consequuntur, debitis, <a href="#">neque, unde impedit</a> laudantium itaque expedita libero commodi ea. Tenetur commodi delectus saepe eius esse minima.</p>
@@ -56,9 +56,9 @@
 
 
                 <section id="experience" class="experience mb-96px">
-                    <h3>EXPERIENCE</h3>
+                    <h3 class="mb-16px">EXPERIENCE</h3>
 
-                    <a href="robomate.tech" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.robomate.tech/" target="_blank" rel="noopener noreferrer">
                         <div class="container">
                             <div class="job-period">
                                 <p>NOV 2022 — PRESENT</p>
@@ -91,33 +91,35 @@
 
 
                 <section id="skills" class="skills mb-96px">
-                    <h3>SKILLS</h3>
+                    <h3 class="mb-16px">SKILLS</h3>
 
-                    <div class="skill">
-                        <p>Front-End Languages:</p>
-                        <ul>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>JavaScript</li>
-                        </ul>
-                    </div>
+                    <div class="skills-container">
+                        <div class="skill">
+                            <p>Front-End Languages:</p>
+                            <ul>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>JavaScript</li>
+                            </ul>
+                        </div>
 
-                    <div class="skill">
-                        <p>Tools & Platforms:</p>
-                        <ul>
-                            <li>Git</li>
-                            <li>GitHub</li>
-                            <li>WordPress</li>
-                            <li>Photoshop</li>
-                            <li>After Effects</li>
-                            <li>Figma</li>
-                        </ul>
+                        <div class="skill">
+                            <p>Tools & Platforms:</p>
+                            <ul>
+                                <li>Git</li>
+                                <li>GitHub</li>
+                                <li>WordPress</li>
+                                <li>Photoshop</li>
+                                <li>After Effects</li>
+                                <li>Figma</li>
+                            </ul>
+                        </div>
                     </div>
                 </section>
 
 
                 <section id="projects" class="projects mb-96px">
-                    <h3>PROJECTS</h3>
+                    <h3 class="mb-16px">PROJECTS</h3>
 
                     <a href="#">
                         <div class="project mb-48px container">
@@ -144,7 +146,7 @@
 
                 
                 <section id="hobbies" class="hobbies mb-96px">
-                    <h3>HOBBIES</h3>
+                    <h3 class="mb-16px">HOBBIES</h3>
 
                     <p class="mb-16px">I love technology, anime, discussing sense of the thing, eating in cafes, and especially improving in something where I want to become a master.</p>
 
