--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
 
         <video autoplay loop muted>
-            <source src="videoplayback.mp4" type="video/mp4" />
-            <source src="videoplayback.webm" type="video/webm" />
+            <source src="videos/background-video.mp4" type="video/mp4" />
+            <source src="videos/background-video.webm" type="video/webm" />
         </video>
 
         <div class="flex-placeholder-left"></div>
