--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     </head>
     <body>
 
-        <video autoplay loop muted>
+        <!-- <video autoplay loop muted>
             <source src="videos/suzume-door-to-the-past-moewalls-com.mp4" type="video/mp4" />
-            <!-- <source src="videos/background-video.webm" type="video/webm" /> -->
-        </video>
+            <source src="videos/background-video.webm" type="video/webm" />
+        </video> -->
 
         <div class="flex-placeholder-left"></div>
 
