Add class to every name of section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             <main>
 
                 <section id="about" class="about mb-96px">
-                    <h3 class="mb-16px">ABOUT</h3>
+                    <h3 class="section-name mb-16px">ABOUT</h3>
+
                     <p class="mb-16px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, doloremque voluptatum? Hic officia corrupti assumenda <a href="#">nulls sapiente</a>, commodi cum accusamus est dignissimos ab placeat laboriosam iste itaque suscipit ipsa?</p>
                     <p class="mb-16px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque cupiditate facilis quia, perspiciatis atque aut saepe veniam? Eum corporis repellat <a href="#">illum voluptates</a> suscipit ab aspernatur harum sequi, ducimus iusto aperiam.</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident inventore velit maiores consequuntur, debitis, <a href="#">neque, unde impedit</a> laudantium itaque expedita libero commodi ea. Tenetur commodi delectus saepe eius esse minima.</p>
@@ -56,7 +57,7 @@
 
 
                 <section id="experience" class="experience mb-96px">
-                    <h3 class="mb-16px">EXPERIENCE</h3>
+                    <h3 class="section-name mb-16px">EXPERIENCE</h3>
 
                     <a href="https://www.robomate.tech/" target="_blank" rel="noopener noreferrer">
                         <div class="container">
@@ -91,7 +92,7 @@
 
 
                 <section id="skills" class="skills mb-96px">
-                    <h3 class="mb-16px">SKILLS</h3>
+                    <h3 class="section-name mb-16px">SKILLS</h3>
 
                     <div class="skills-container">
                         <div class="skill">
@@ -119,7 +120,7 @@
 
 
                 <section id="projects" class="projects mb-96px">
-                    <h3 class="mb-16px">PROJECTS</h3>
+                    <h3 class="section-name mb-16px">PROJECTS</h3>
 
                     <a href="#">
                         <div class="project mb-48px container">
@@ -146,7 +147,7 @@
 
                 
                 <section id="hobbies" class="hobbies mb-96px">
-                    <h3 class="mb-16px">HOBBIES</h3>
+                    <h3 class="section-name mb-16px">HOBBIES</h3>
 
                     <p class="mb-16px">I love technology, anime, discussing sense of the thing, eating in cafes, and especially improving in something where I want to become a master.</p>
 
