Fix forgetting heading tag

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         </div>
 
                         <div class="skill">
-                            <p>Tools & Platforms:</p>
+                            <h3>Tools & Platforms:</p>
                             <ul>
                                 <li>Git</li>
                                 <li>GitHub</li>
@@ -172,6 +172,7 @@
                 </footer>
 
                 <script src="script.js"></script>
+                
             </main>
         </div>
 
