--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <a href="#">
                             <div class="hobby container">
                                 <img alt="Anime Picture" src="https://www.looper.com/img/gallery/the-devil-is-a-part-timer-season-2-release-date-cast-and-plot-what-we-know-so-far/l-intro-1619444419.jpg">
-                                <a href="#">List of Anime</a>
+                                <a href="#"><h3>List of Anime</h3></a>
                             </div>
                         </a>
                     </div>
