Delete useless code, group up some CSS rules

--- a/index.html
+++ b/index.html
@@ -67,22 +67,20 @@
                             </div>
 
                             <div class="experience-info">
+
                                 <h3 class="mb-16px">SMM manager | robomate</h3>
 
-                                <p class="experience-description mb-16px">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor dolorum perspiciatis velit necessitatibus voluptatum sint, perferendis doloremque harum provident deserunt.
-                                </p>
+                                <p class="mb-16px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor dolorum perspiciatis velit necessitatibus voluptatum sint, perferendis doloremque harum provident deserunt.</p>
 
-                                <div class="experience-skills">
-                                    <ul>
-                                        <li>WordPress</li>
-                                        <li>Elementor</li>
-                                        <li>Photoshop</li>
-                                        <li>After Effects</li>
-                                        <li>Figma</li>
-                                        <li>Teamwork</li>
-                                    </ul>
-                                </div>
+                                <ul>
+                                    <li>WordPress</li>
+                                    <li>Elementor</li>
+                                    <li>Photoshop</li>
+                                    <li>After Effects</li>
+                                    <li>Figma</li>
+                                    <li>Teamwork</li>
+                                </ul>
+
                             </div>
                         </div>
                     </a>
@@ -92,7 +90,7 @@
                 <section id="skills" class="skills mb-96px">
                     <h2 class="section-name mb-16px">SKILLS</h2>
 
-                    <div class="skills-container">
+                    <div class="skills">
                         <div class="skill">
                             <h3>Front-End Languages:</h3>
 
@@ -105,6 +103,7 @@
 
                         <div class="skill">
                             <h3>Tools & Platforms:</p>
+                                
                             <ul>
                                 <li>Git</li>
                                 <li>GitHub</li>
@@ -161,7 +160,7 @@
                         <a href="#">
                             <div class="hobby container">
                                 <img alt="Anime Picture" src="https://www.looper.com/img/gallery/the-devil-is-a-part-timer-season-2-release-date-cast-and-plot-what-we-know-so-far/l-intro-1619444419.jpg">
-                                <a href="#"><h3>List of Anime</h3></a>
+                                <h3>List of Anime</h3>
                             </div>
                         </a>
                     </div>
