Add 'Education' section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                         <a href="#experience">EXPERIENCE</a>
                         <a href="#skills">SKILLS</a>
                         <a href="#projects">PROJECTS</a>
+                        <a href="#education">EDUCATION</a>
                         <!-- <a href="#hobbies">HOBBIES</a> -->
                     </nav>
                 </div>
@@ -157,6 +158,33 @@
                                     <li>After Effects</li>
                                     <li>Figma</li>
                                     <li>Teamwork</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </section>
+
+
+                <section id="education" class="projects mb-96px">
+                    <h2 class="section-name mb-16px">EDUCATION</h2>
+
+                    <a href="#">
+                        <div class="project mb-48px container">
+                            <img src="https://www.theodinproject.com/assets/og-logo-022832d4cefeec1d5266237be260192f5980f9bcbf1c9ca151b358f0ce1fd2df.png">
+ 
+                            <div>
+                                <h3>The Odin Project</h3>
+
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis, dolor suscipit distinctio nostrum error sit hic reprehenderit cumque dolorem ipsam aliquid beatae ipsum.</p>
+
+                                <ul class="list-of-skills">
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>JavaScript</li>
+                                    <li>Problem Solving</li>
+                                    <li>VS Code</li>
+                                    <li>Git</li>
+                                    <li>GitHub</li>
                                 </ul>
                             </div>
                         </div>
